# chats

./: Dockerfile  Makefile  README.md  app.env.example  app.test.env.sh  docker-compose.yml  env.example  go.mod  go.sum
.github/workflows/: deployment.yml  development.yml  testing.yml
cmd/: main.go
config/: config.go  config_test.go
golang/noname-one-time-session-chat/: env.sh
golang/one-time-session-chat/: README.md  docker-compose.yml  env.example  go.mod  go.sum
golang/support-chat/: Makefile  env.example  go.mod  go.sum
health/: handler.go
internal/chat/: dto.go  errors.go  handler.go  helpers.go  messageHandler.go  middleware.go  service.go
internal/health/: handler.go
internal/support/: dto.go  errors.go  handler.go  mapper.go  middleware.go  middleware_test.go  repository.go  repository_test.go  service.go  service_test.go  support.go  support_test.go
internal/user/: dto.go  errors.go  handler.go  mapper.go  middleware.go  service.go  (+6 more)
noname-one-time-session-chat/: README.md  docker-compose.yml  env.example  env.sh  go.mod  go.sum
noname-support-chat/: Dockerfile  Makefile  docker-compose.yml  go.mod
rust/noname_one_time_session-chat/: Cargo.toml  index.html
rust/noname_one_time_session-chat/src/: lib.rs
rust/noname_one_time_session-chat/src/api/: mod.rs
rust/noname_one_time_session-chat/src/api/chat/: mod.rs  server.rs  service.rs  session.rs
rust/noname_one_time_session-chat/src/api/health/: route.rs  service.rs
rust/noname_one_time_session-chat/src/config/: mod.rs
rust/noname_one_time_session-chat/src/databases/: mod.rs
rust/one-time-session-chat/: Cargo.toml
rust/one-time-session-chat/src/api/chat/: session.rs
rust/one-time-session-chat/src/databases/: mod.rs
(+241 files in other folders)
