[package]
name = "noname-one-time-session-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.9.0"
tokio = "1.20.1"
mongodb = "2.3.0"
redis = { version = "0.17.0", features = ["tokio-comp"] }
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"
